# Ingenieria-informatica-UCO

./: README.md
ac/Practica1/: Basico.rep  ejemplo1.txt  ejemplo2tabla.txt  ejemplo3.txt  ejercicio1.txt  ejercicio2.txt  ejercicio3.txt  ejercicio4.txt
ac/Practica2/: Basico.lcb  Basico.rep  Basico2.lcb  Hoja Microprogramación.xls  pruebajazpn.txt  pruebajeg11.txt  pruebajmpr.txt  pruebapop.txt  pruebapopi.txt  pruebapush.txt  pruebapushi.txt
ac/Practica3/: INSTRUCCIONES.txt  Nuevo documento de texto.txt  p3.lcb  p3.rep  pruebaADDAQ.txt  pruebaPARAQ.txt  pruebaZeros32.txt  pruebaej1.txt  pruebaej2.txt
bbdd/: ejExamen.sql
poo/p1/: CMakeLists.txt  espacios_nombres.cc  person-main.cc  person.h
poo/p2/: CMakeLists.txt
poo/p2/src/: CMakeLists.txt
poo/p3/marketplace/tests/: CMakeLists.txt  person-test.cc
poo/p4/marketplace/: CMakeLists.txt
poo/p4/marketplace/tests/: CMakeLists.txt
poo/p8/: a.out  bucle.cc  ordena.cc  ordena2.cc  ordena3.cc
poo/p8/contador/: Makefile  contador-unittest  contador.cc  contador.h
poo/p8/templates/: a.out  plantilla.cc  plantilla2.cc
sistemasOperativos/Practica1/demos1/: demo2.c  demo5  demo6  demo8  while-wait-waitpid.c
sistemasOperativos/Practica1/ej1/: ej1  ej1.c
sistemasOperativos/Practica1/ej2/: ej2.c
sistemasOperativos/Practica1/ej3/: ej3  ej3.c
sistemasOperativos/Practica1/ej4/: ej4  ej4.c
sistemasOperativos/Practica1/ej5/: ej5  ej5.c  factorial.c
sistemasOperativos/Practica1/ej8/: ej8.c
sistemasOperativos/Practica1/ej9/: ej9.c  ej9sig.c
sistemasOperativos/Practica1/sennales/: seniales1  seniales1.c  seniales2.c
so/Practica1/demos1/: demo1.c  demo3.c  demo4.c  demo7
so/Practica1/ej1/: ej1  ej1.c
so/Practica3/: ej1  ej1.c  ej2  ej2.c  hebrastruct  hebrastruct.c
(+93 files in other folders)
